tests/invalid_programs/types/main_with_string.duck
fun main() -> String {
    return "Hallo, Welt";
}
